--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>🌳 БАОЛАРМ</h1>
+            <h1>Баоларм</h1>
+            <img src="icon-512.png" alt="Баоларм" width="128" height="128" style="display:block; margin: 10px auto;">
             <p class="subtitle">Саркастичный анти-будильник</p>
         </header>
 
@@ -23,11 +24,9 @@
 
             <div class="controls">
                 <input type="time" id="alarmTime" class="time-picker">
-                <button id="setAlarm" class="btn alarm-btn">Поставить будильник</button>
-                <div class="action-buttons">
-                    <button id="sleepBtn" class="btn sleep-btn">Иду спать!</button>
-                    <button id="wakeBtn" class="btn wake-btn">Я проснулся!</button>
-                </div>
+                <button id="setAlarm" class="btn alarm-btn"></button>
+                <button id="sleepBtn" class="btn sleep-btn">Иду спать!</button>
+                <button id="wakeBtn" class="btn wake-btn">Я проснулся!</button>
             </div>
 
             <div class="comment-container">
